--- a/perldoc/ko/perl/5.10/perlfunc.pod
+++ b/perldoc/ko/perl/5.10/perlfunc.pod
@@ -11221,8 +11221,8 @@ In scalar context, the behaviour of C<sort()> is undefined.
 
 =end original
 
-リストコンテキストでは、LIST をソートし、ソートされたリスト値を返します。
-スカラコンテキストでは、C<sort()> の振る舞いは未定義です。
+리스트 컨텍스트에서는 LIST 를 정렬해서, 정렬된 리스트 값을 반환합니다.
+스칼라 컨텍스트에서는 C<sort()> 의 행동은 미정의입니다.
 
 =begin original
 
@@ -11238,17 +11238,15 @@ an anonymous, in-line sort subroutine.
 
 =end original
 
-SUBNAME や BLOCK を省略すると、標準の文字列比較の順番でソートが
-行なわれます。
-SUBNAME を指定すると、それは、リストの要素をどのような順番に並べるかに
-応じて、負、ゼロ、正の整数を返すサブルーチンの名前であると解釈されます。
-(このようなルーチンには、C<< <=> >> 演算子や cmp 演算子が、
-たいへん便利です。)
-SUBNAME は、スカラ変数名(添字なし)でもよく、
-その場合には、その値が使用する実際のサブルーチンの
-名前(またはそのリファレンス)と解釈されます。
-SUBNAME の代わりに、無名のインライン
-ソートルーチンとして、BLOCK を書くことができます。
+SUBNAME 이나 BLOCK 을 생략하면 표준의 문자열 비교의 순서로 정렬이 
+수행됩니다.
+SUBNAME 을 지정하면, 그것이 리스트의 요소를 어떤 순서로 나열하는 가에 
+대해서 부수, 제로, 정수를 반환하는 서브루틴의 이름으로 해석됩니다.
+(이런 루틴에서는 C<< <=> >> 연산자나 cmp 연산자가 꽤 편리합니다)
+SUBNAME 은 스칼라 변수이름(첨자없음)이라도 좋고, 
+그 경우에는 그 값이 사용하는 실제의 서브틴의 이름(또는 그 리퍼런스)로 
+해석됩니다. SUBNAME 대신에 이름없는 인라인 소트 루틴으로 BLOCK 을 
+쓸 수 있습니다.
 
 =begin original
 
@@ -11262,14 +11260,12 @@ $b as lexicals.
 
 =end original
 
-サブルーチンのプロトタイプが C<($$)>の場合、
-比較する要素は通常のサブルーチンと同じように C<@_> の中に
-リファレンスとして渡されます。
-これはプロトタイプなしのサブルーチンより遅いです。
-この場合は比較のためサブルーチンに渡される 2 つの
-要素は、パッケージのグローバル変数 $a と $b で渡されます
-(次の例を参照してください)。
-後者の場合、レキシカルに $a と $b を宣言するのは普通逆効果になります。
+서브루틴의 프로토타입이 C<($$)> 인 경우, 비교하는 요소는 보통 서브루틴처럼 
+C<@_> 안에 리퍼런스로 건네집니다.
+이것은 프로토타입없는 서브루틴보다 느립니다. 이 경우는 비교를 위해 
+서브루틴에 넘겨진 2개의 요소는 패키지의 글로벌 변수 $a 와 $b 로 건네집니다.
+(다음의 예제를 참조해주세요).
+후자의 경우는 렉시컬하게 $a 와 $b 를 선언하는 것은 보통 역효과가 됩니다.
 
 =begin original
 
@@ -11278,7 +11274,7 @@ be modified.
 
 =end original
 
-$a や $b はリファレンスによって渡されるので、変更するべきではありません。
+$a 나 $b  는 리퍼런스에 의해 건네지기 때문에 변경해야하는 것이 아닙니다.
 
 =begin original
 
@@ -11287,8 +11283,8 @@ loop control operators described in L<perlsyn> or with C<goto>.
 
 =end original
 
-また、ソートブロックやサブルーチンから L<perlsyn> で説明されている
-ループ制御子や C<goto> を使って抜けてはいけません。
+또, sort block 이나 서브루틴에서 L<perlsyn> 에서 설명되는 루프 제어자나 
+C<goto> 를 사용해서 빠져나와서는 안됩니다.
 
 =begin original
 
@@ -11297,8 +11293,8 @@ current collation locale.  See L<perllocale>.
 
 =end original
 
-C<use locale> が有効の場合、C<sort LIST> は LIST を現在の比較ロケールに
-従ってソートします。L<perllocale> を参照して下さい。
+C<use locale> 이 유효한 경우, C<sort LIST> 는 LIST 를 현재의 비교로케일에 
+따라 정렬ㅂ니다. L<perllocale> 을 참조해주세요.
 
 =begin original
 
@@ -11310,11 +11306,11 @@ something to be avoided when writing clear code.
 
 =end original
 
-sort() は元のリストへのエイリアスを返します; for ループのインデックス変数が
-リスト要素へのエイリアスと同様です。
-つまり、sort() で返されるリストの要素を(例えば、C<foreach> や C<map> や
-C<grep> で)変更すると、実際に元のリストの要素が変更されます。
-これはきれいなコードを書くことで普通は回避できます。
+sort() 는 원래의 리스트로의 alias 를 반환합니다; for 루프의 인덱스 변수가
+리스트 요소로의 alias 와 같습니다.
+즉, sort() 로 반환되는 리스트 요소를(예를들면, C<foreach> 나 C<map> 이나 
+C<grep> 에서) 변경하면, 실제로 원래의 리스트 요소가 변경됩니다.
+이것은 예쁜 코드를 쓰는 것으로 보통은 회피할 수 있습니다.
 
 =begin original
 
@@ -11334,21 +11330,19 @@ independent ways quite probably will.  See L<sort>.
 
 =end original
 
-Perl 5.6 以前ではソートの実装にクイックソートアルゴリズムを使っていました。
-このアルゴリズムは安定せず、2 乗の時間が掛かる I<可能性があります> 。
-(I<安定した> ソートは、比較した時に同じ要素の入力順が保存されます。
-クイックソートの実行時間は、長さ N の全ての配列の平均では
-O(NlogN) ですが、入力によっては O(N**2) という I<2 乗の> 振る舞いを
-することがあります。)
-5.7 では、クイックソートによる実装は、最悪の場合の振る舞いも
-O(NlogN) である、安定したマージソートアルゴリズムに置き換えられました。
-しかし、入力とプラットフォームによっては、ベンチマークはクイックソートの
-方が速くなります。
-5.8 ではソートを限定的に制御できる sort プラグマがあります。
-この、アルゴリズムの直接的な制御方法は将来の perl では引き継がれないかも
-しれませんが、実装に依存しない形で入力や出力を性格付ける機能は
-おそらくあります。
-L<sort> を参照してください。
+Perl 5.6 이전에서는 정렬의 구성에 퀵 소트 알고리즘을 사용했습니다.
+이 알고리즘은 안정되지 않고, 2 승의 시간이 걸릴 I<가능성이 있습니다>.
+(I<안정된> 정렬은 비교한 때에 같은 요소의 입력순으로 보존됩니.
+퀵소트의 실행시간은 길이 N 의 모든 배열의 평균에서는 O(NlogN) 입니다만, 
+입력에 따라서는 O(N**2) 라는 I<2 승의> 행동을 하는 수가 있습니다)
+5.7 에서는 퀵소트에 의한 구성은 최악의 경우의 행동도 O(NlogN) 인, 
+안정된 머지소트알고리즘으로 바꿔졌습니다.
+그러나, 입력과 플랫폼에 따라서는 벤치마크는 퀵소트의 쪽이 빨라집니다.
+5.8 에서는 정렬을 한정적으로 제어할 수 있는 sort 프라그마가 있습니다.
+이 알고리즘의 직접적인 제어방법은 장래의 perl 에서는 계속되지 않을지도 
+모르지만, 구성에 의존하지 않는 형태로 입력이나 출력을 성격을 정하는 기능은
+아마도 있습니다.
+L<sort> 를 참조하세요.
 
 =begin original
 
@@ -11356,7 +11350,7 @@ Examples:
 
 =end original
 
-例:
+예제:
 
     # sort lexically
     @articles = sort @files;
@@ -11453,10 +11447,9 @@ if you're in the C<main> package and type
 
 =end original
 
-use strict している場合、$a と $b をレキシカルとして
-宣言しては I<いけません>。
-これはパッケージグローバルです。
-つまり、C<main> パッケージで以下のように書いた場合:
+use strict 하고 있는 경우 $a 와 $b 를 렉시컬로 선언해서는 I<안됩니다>.
+이것은 패키지 글로벌입니다.
+즉, C<main> 패키지에서 아래처럼 쓴 경우:
 
     @articles = sort {$b <=> $a} @files;
 
@@ -11467,8 +11460,8 @@ but if you're in the C<FooPack> package, it's the same as typing
 
 =end original
 
-C<$a> と C<$b> は C<$main::a> と C<$main::b> (または C<$::a> と C<$::b>) を
-意味しますが、C<FooPack> パッケージ内の場合、これは以下と同じになります:
+C<$a> 와 C<$b> 는 C<$main::a> 와 C<$main::b> (또는 C<$::a> 와 C<$::b>) 를 
+의미하지만, C<FooPack> 패키지안의 경우는 이것은 아래처럼 됩니다:
 
     @articles = sort {$FooPack::b <=> $FooPack::a} @files;
 
@@ -11481,9 +11474,10 @@ well-defined.
 
 =end original
 
-比較関数は一貫した振る舞いをすることが求められます。
-一貫しない結果を返す(例えば、あるときは C<$x[1]> が C<$x[2]> より
-小さいと返し、またあるときは逆を返す)場合、結果は未定義です。
+비교함수는 일관된 행동을 하는 것을 원합ㅣ다.
+일관되지 않은 결과를 반환하는(예를 들어, 어떤 때는 C<$x[1]> 이 
+C<$x[2]> 보다 작다고 반환하고 또 어떤때는 반대의 경우를 반환하는) 
+경우, 결과는 미정의입니다.
 
 =begin original
 
@@ -11496,12 +11490,12 @@ eliminate any C<NaN>s from the input.
 
 =end original
 
-C<< <=> >> はどちらかのオペランドが C<NaN> (not-a-number) のときに
-C<undef> を返し、C<sort> は比較の結果が未定義値だと致命的エラーになるので、
-C<< $a <=> $b >> といった比較関数でソートする場合はリストに C<NaN> が
-含まれないように注意してください。
-以下の例は 入力から C<NaN> を取り除くために C<NaN != NaN> という性質を
-利用しています。
+C<< <=> >> 는 어느쪽의 operand 가 C<NaN> (not-a-number) 일 때에 
+C<undef> 를 반환하고, C<sort> 는 비교 결과가 미정의값이라고 치명적 
+에러가 되기때문에, C<< $a <=> $b >> 같은 비교함수로 정렬하는 경우는 
+리스트에 C<NaN> 이 포함되지 않도록 주의해주세요.
+아래의 예제는 입력에서 C<NaN> 을 빼기 위해서는 C<NaN != NaN> 같은 
+성질을 이용하고 있습니다.
 
     @result = sort { $a <=> $b } grep { $_ == $_ } @input;
 
@@ -11531,19 +11525,19 @@ end of the array.
 
 =end original
 
-ARRAY から OFFSET、LENGTH で指定される要素を取り除き、
-LIST があれば、それを代わりに挿入します。
-リストコンテキストでは、配列から取り除かれた要素を返します。
-スカラコンテキストでは、取り除かれた最後の要素を返します。
-要素が取り除かれなかった場合は C<undef> を返します。
-配列は、必要に応じて、大きくなったり、小さくなったりします。
-OFFSET が負の数の場合は、配列の最後からの距離を示します。
-LENGTH が省略されると、OFFSET 以降のすべての要素を取り除きます。
-LENGTH が負の数の場合は、OFFSET から前方へ、配列の最後から -LENGTH 要素を
-除いて取り除きます。
-OFFSET と LENGTH の両方が省略されると、全ての要素を取り除きます。
-OFFSET が配列の最後より後ろの場合、perl は警告を出し、配列の最後に対して
-処理します。
+ARRAY 에서 OFFSET, LENGTH 에서 지정된 요소를 제외하고,
+LIST 가 있으면 그것을 대신에 투입합니다.
+리스트 컨텍스트에서는 배열에서 뺀 요소를 반환합니다.
+스칼라 컨텍스트에서는 빠진 마지막의 요소를 반환합니다.
+요소가 빠지지 않은 경우는 C<undef> 를 반환합니다.
+배열은 필요에 따라서 크거나, 작아질 수 있습니다.
+OFFSET 이 음수인 경우는 배열의 마지막에서의 거리를 나타냅니다.
+LENGTH 가 생략되면 OFFSET 이후의 모든 요소를 제외합니다.
+LENGTH 가 음수인 경우는 OFFSET 에서 전방으로 배열의 마지막부터 -LENGTH 요소를 
+빼고 제외합니다.
+OFFSET 과 LENGTH 의 양쪽이 생략되면 모든 요소를 제외합니다.
+OFFSET 이 배열의 마지막보다 뒤인 경우 perl 은 경고를 내고, 배열의 마지막에 
+대해서 처리합니다.
 
 =begin original
 
@@ -11551,7 +11545,7 @@ The following equivalences hold (assuming C<< $[ == 0 and $#a >= $i >> )
 
 =end original
 
-以下は、(C<< $[ == 0 と $#a >= $i >> と仮定すると) それぞれ、等価です。
+아래는 (C<< $[ == 0 과 $#a >= $i >> 라고 가정하면) 각각 같습니다.
 
     push(@a,$x,$y)	splice(@a,@a,0,$x,$y)
     pop(@a)		splice(@a,-1)
@@ -11565,7 +11559,7 @@ Example, assuming array lengths are passed before arrays:
 
 =end original
 
-次の例では、配列の前に、それぞれの配列の大きさが渡されるものとしています:
+다음의 예제에서는 배열의 앞에서 각각의 배열의 크가가 건네지는 것입니다.
 
     sub aeq {	# compare two list values
 	my(@a) = splice(@_,0,shift);
@@ -11595,9 +11589,9 @@ deleted.  (If all fields are empty, they are considered to be trailing.)
 
 =end original
 
-文字列 EXPR を文字列のリストに分割して、リストを返します。
-デフォルトでは、行頭の空白は保存され、末尾の空白は削除されます。
-(全てのフィールドが空の場合、これらは末尾であるとして扱われます。)
+문자열 EPR 을 문자열의 리스트 로 분할한 리스트를 반환합니다.
+기본값으로는 줄의 첫번째의 공백은 보존되고, 끝단의 공백은 제거됩니다.
+(모든 필드가 빌 경우, 이것은 끝단인 것으로 취급됩니다.)
 
 =begin original
 
@@ -11607,10 +11601,10 @@ because it clobbers your subroutine arguments.
 
 =end original
 
-スカラコンテキストの場合には、見つかったフィールドの数を返し、
-配列 C<@_> に分割結果を設定します。
-しかし、スカラコンテキストでの split の使用は推奨されません。
-サブルーチンの引数を上書きしてしまうからです。
+스칼라컨텍스트인 경우에는 발견한 필드의 수를 반환하고,
+배열 C<@_> 에 분할결과를 설정합니다.
+그러나 스칼라 컨텍스트에서의 split 의 사용은 추천하지 않습니다.
+서브루틴의 인수를 덮어써버리기 때문입니다.
 
 =begin original
 
@@ -11621,11 +11615,11 @@ that the delimiter may be longer than one character.)
 
 =end original
 
-EXPR を省略すると、文字列 C<$_> を split します。
-もし、PATTERN も省略すると、
-(先頭の空白文字をスキップした後) 空白で split します。
-PATTERN にマッチするものは、フィールドを分割するデリミタとして扱われます。
-(デリミタは、1 文字とは限りません。)
+EXPR 을 생략하면, 문자열 C<$_> 를 split 합니다.
+만약 PATTERN 을 생략하면 
+(맨앞의 공백문자를 스킵한 뒤) 공백으로 split 합니다.
+PATTERN 에 매치하는 것은 필드를 분할하는 구분자로 취급됩니다.
+(구분자는 1문자뿐만 아닙니다)
 
 =begin original
 
@@ -11641,14 +11635,14 @@ specified.
 
 =end original
 
-正の数の LIMIT を指定した場合には、EXPR が分割されるフィールドの最大数を
-表しますが、実際に返されるフィールドの数は EXPR の中で何回 PATTERN が
-マッチするかに依存します。
-LIMIT を指定しないかゼロなら、末尾の空フィールドを捨ててしまいます
-(C<pop> を行なうときには気を付けないといけません)。
-LIMIT が負ならば、LIMIT に任意の大きな数を指定したのと同じことになります。
-空文字列に評価される EXPR を分割する場合、LIMIT での指定に関わらず
-常に空のリストが返ることに注意してください。
+정수의 LIMIT 를 지정한 경우에는 EXPR 이 분할된 필드의 최대수를 
+나타내지만 실제로 반환되는 필드의 수가 EXPR의 안에서 몇번 PATTERN 이 
+매치하는 가에 의존합니다.
+LIMIT 을 지정하지않거나 제로라면 끝단의 빈 필드를 버립니다
+(C<pop> 를 수행하는 때에는 신경쓰지 않으면 안됩니다).
+LIMIT 가 음수라면 LIMIT 에 임의의 크기의 수를 지정한 것과 같아집니다.
+빈 문자열로 평가된 EXPR 을 분할하는 경우, LIMIT 에서의 지정에 상관없이 
+항상 빈 리스트가 반환하는 것에 주의해주세요.
 
 =begin original
 
